--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
+html,body{
+    height: 60%;
+    width: 100%;
+}
+
 body{
     display: flex;
-    justify-content: space-around;
+    /*justify-content: space-around;*/
     align-items: center;
     flex-direction: column;
     gap: 20px;
 }
 
 .container{
+    height:800px;
+    width: 800px;
+    display: flex;
+    flex-direction: column;
     border-color: blue;
     border-width: 10px;
-    border-style: solid;
+    border-style: solid; 
     
 }
 
